--- a/package.json
+++ b/package.json
@@ -17,25 +17,26 @@
   "license": "MIT",
   "dependencies": {
     "consolidate": "^0.14.0",
-    "ejs": "^2.4.1",
+    "ejs": "^2.5.2",
     "express": "^4.13.4"
   },
   "devDependencies": {
-    "browser-sync": "^2.13.0",
+    "browser-sync": "^2.15.0",
     "chokidar": "^1.5.1",
+    "clean-webpack-plugin": "^0.1.10",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.9.3",
     "npm-install-webpack-plugin": "^2.0.2",
     "reload": "^0.7.0",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
