--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "browser-sync": "^2.18.5",
     "chokidar": "^1.6.1",
     "clean-webpack-plugin": "^0.1.14",
-    "cross-env": "^1.0.8",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "node-sass": "^3.13.1",
-    "npm-install-webpack-plugin": "^2.0.2",
-    "reload": "^0.7.0",
-    "resolve-url-loader": "^1.6.1",
-    "sass-loader": "^3.2.3",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "node-sass": "^4.5.0",
+    "npm-install-webpack-plugin": "^4.0.4",
+    "reload": "^1.1.1",
+    "resolve-url-loader": "^2.0.0",
+    "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.15.0"
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.0"
   }
 }
