--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "resolve-url-loader": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
+    "supervisor": "^0.12.0",
     "url-loader": "^0.5.9",
     "webpack": "^2.7.0",
     "webpack-dev-middleware": "^1.12.2",
