--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
   },
   "license": "MIT",
   "dependencies": {
-    "consolidate": "^0.14.5",
-    "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "consolidate": "^0.15.1",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.13",
-    "chokidar": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "cross-env": "^3.2.4",
-    "css-loader": "^0.26.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.10.1",
-    "node-sass": "^4.7.2",
-    "npm-install-webpack-plugin": "^4.0.5",
-    "reload": "^1.1.7",
-    "resolve-url-loader": "^2.2.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.13.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^2.7.0",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-hot-middleware": "^2.21.0"
+    "browser-sync": "^2.26.7",
+    "chokidar": "^3.3.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.0",
+    "reload": "^3.0.4",
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.2",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
